# focus-is-what-you-need

./: .gitignore  Architecture.md  CLAUDE.md  Design.md  Product.md  README.md  UX.md  Versioning.md  package.json
.claude/: launch.json
.devcontainer/: devcontainer.json  init-firewall.sh
apps/desktop/: BETTER.md  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/src/: db.rs  eyedropper.rs  fonts.rs  lib.rs  models.rs
branding/: logo-concepts-v4.html  logo-concepts-v5.html  logo-options-v2.html  logo-variations-v3.html
docs/: Architecture.md  UX.md  Versioning.md  canvas-image-drop.md  inspector-appearance.md  inspector-border-stroke.md  inspector-effects.md  inspector-export.md  inspector-fill.md  inspector-typography.md  save-architecture-v3.md  screen-simulator-overlay.md  standalone-screen-component.md  svg-icons.md  svg-vector-editing-plan.md  version-promote-main.md
docs/branding/: logo-showcase.html
docs/planned/: Better.md  Better2.md  auto-layout-resolve.md  builder-future.md  canvas-image-drop.md  canvas-inspector-audit.md  canvas-parent-navigator.md  canvas-surface-adapter-framework.md  codebase-audit-backlog.md  collaboration-sync-protocol.md  collaboration-transport.md  color-mode.md  component-templates.md  e2e-test-suite.md  finetuning-dataset.md  github-component-link.md  inspector-appearance.md  inspector-border-stroke.md  inspector-effects.md  inspector-export.md  inspector-fill.md  inspector-guides.md  inspector-layout.md  inspector-typography.md  motion.md  svg-icons.md  (+11 more)
prompts/: craft-text-detector.md  lama-inpainting.md
scripts/: .gitignore  convert_models.py  export-gephi.ts
(+754 files in other folders)
