[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.17", features = [] }
tauri-plugin-log = "2.0.0-rc"
base64 = "0.22"
dirs = "6.0"
rfd = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# On-device AI processing (background removal + upscale). `ort` bundles ONNX
# Runtime via its default `download-binaries` feature and re-exports `ndarray`.
ort = "2.0.0-rc.12"
# Must match ort's internal ndarray (0.17.x) so array types unify across crates.
ndarray = "0.17"
reqwest = "0.12"

# Native macOS-only deps for the screen color sampler (eyedropper). AppKit's
# NSColorSampler is driven through the safe objc2 bindings; gated to macOS so
# Linux/Windows builds never see them.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
# `block2` feature is required: showSamplerWithSelectionHandler: takes an Obj-C block
# and is gated behind `all(feature = "NSColor", feature = "block2")` in the bindings.
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSColorSampler", "NSColorSpace", "block2"] }
block2 = "0.6"
